# Preprocessing-Unstructured-Data-for-LLMs-and-RAG-Systems

./: .gitignore  README.md  pyproject.toml  test.py
data/: conflict.html  devops-roadmap.md  el_nino.html  medium_blog.html
final_rag_sys/: rag_bot.py
intro/: app_html.py  app_pdf.py  app_pptx.py
metadata_chunking/: app_metadata.py
pdf_and_images/: app_pdf_images.py
table_extraction/: app_table.py
